# OOP_LABS_Neochiter22

./: CMakeLists.txt  Cmakelists.txt  main.cpp
.LABS/: 1.txt
include/: Array.h  Calculator.h  Figure.h  Point.h  Rectangle.h  ShapeArray.h  Square.h  Trapezoid.h  memory_resource.hpp  queue.hpp
src/: Calculator.cpp  Figure.cpp  Rectangle.cpp  ShapeArray.cpp  Square.cpp  Trapezoid.cpp  npc.cpp  scheduler.cpp
test/: FiguresTest.cpp  tests01.cpp
tests/: FigureTest.cpp  tests.cpp
